0.2.0
-----
1. Add option to show (and sort by) year of albums in library view.
2. Show 'Various Artists' at the top of the library view.

0.1.2
-----
1. Explicitly link each Qt library.
2. Fix playqueue header hiding/restoring.
3. Allow to connect to local UNIX domain socket.
4. Jump to track position by clicking on position slider. Thanks to Piotr
   Wicijowski for the idea/patch.
5. Fix name of Polish translations file.
6. Better detection of when mouse is in action rect.
7. More opaque action background.

0.1.1
-----
1. Play/Pause track when middle click on tray iocn. (KDE only). Thanks to Piotr
   Wicijowski for the idea/patch.
2. Only connecto to QTreeView::activated when in single-click. Double-click already
   expands/collapses the item - so if we also do this on activated, then the item
   is re-collapsed/expanded.
3. Only create the tray icon once!
4. Add context menu to toolbar buttons to enable using smaller buttons.
5. Polish translation - thanks to Piotr Wicijowski
6. To be more consistent with other apps, show expander for root items in tree views.
7. Show spinner over library/folder view when loading. (KDE only)
8. Fix some right-to-left issues.
9. Czech translation - thanks to Pavel Fric

0.1.0
-----
[Changes from QtMPC]
1. Use XDG_CACHE_HOME to store XML and covers
2. Hide listview headers
3. Dir view -> Folders, Library view -> Library
4. Removed setting of font style and size - only bold now set
5. In library list, use album-artist (if available, artist otherwise) to group
   albums.
6. Remove search combo, and always default to searching in all fields.
7. Removed warning when add to playlist, and nothing selected - was inconsistent
   with playlist view. (Add to playlist actions should now only be enabled if
   there is something selected)
8. Fix call to setupGUI so as to not create a statusbar
9. If compiled with KDE support;
    - use KMessageBox
    - store config via KConfig
    - make app a KUniqueApplication, and