@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>368</width>
-    <height>250</height>
+    <height>275</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -109,7 +109,7 @@
      </item>
     </widget>
    </item>
-   <item row="5" column="0">
+   <item row="6" column="0">
     <widget class="QLabel" name="label_3a">
      <property name="text">
       <string>Albums view:</string>
@@ -119,7 +119,7 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
+   <item row="6" column="1">
     <widget class="QComboBox" name="albumsView">
      <item>
       <property name="text">
@@ -138,7 +138,7 @@
      </item>
     </widget>
    </item>
-   <item row="6" column="0">
+   <item row="7" column="0">
     <widget class="QLabel" name="label_5c">
      <property name="text">
       <string>Covers in albums view:</string>
@@ -148,7 +148,7 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="1">
+   <item row="7" column="1">
     <widget class="QComboBox" name="albumsCoverSize">
      <item>
       <property name="text">
@@ -172,7 +172,7 @@
      </item>
     </widget>
    </item>
-   <item row="7" column="0">
+   <item row="8" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Folder view:</string>
@@ -182,7 +182,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="1">
+   <item row="8" column="1">
     <widget class="QComboBox" name="folderView">
      <item>
       <property name="text">
@@ -196,7 +196,7 @@
      </item>
     </widget>
    </item>
-   <item row="8" column="0">
+   <item row="9" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Playlists view:</string>
@@ -206,7 +206,7 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="1">
+   <item row="9" column="1">
     <widget class="QComboBox" name="playlistsView">
      <item>
       <property name="text">
@@ -220,7 +220,7 @@
      </item>
     </widget>
    </item>
-   <item row="9" column="0">
+   <item row="10" column="0">
     <widget class="QLabel" name="label_x">
      <property name="text">
       <string>Streams view:</string>
@@ -230,7 +230,7 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="1">
+   <item row="10" column="1">
     <widget class="QComboBox" name="streamsView">
      <item>
       <property name="text">
@@ -261,6 +261,23 @@
      </property>
     </widget>
    </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_7">
+     <property name="text">
+      <string>Group single track albums:</string>
+     </property>
+     <property name="buddy">
+      <cstring>groupSingle</cstring>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <widget class="QCheckBox" name="groupSingle">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <tabstops>
@@ -269,6 +286,7 @@
   <tabstop>libraryView</tabstop>
   <tabstop>libraryCoverSize</tabstop>
   <tabstop>libraryYear</tabstop>
+  <tabstop>groupSingle</tabstop>
   <tabstop>albumsView</tabstop>
   <tabstop>albumsCoverSize</tabstop>
   <tabstop>folderView</tabstop>
