@@ -84,6 +84,7 @@ MusicLibraryItemAlbum::MusicLibraryItemAlbum(const QString &data, const QString 
     , m_year(year)
     , m_coverIsDefault(false)
     , m_cover(0)
+    , m_singleTracks(false)
 {
 }
 
@@ -145,4 +146,23 @@ QStringList MusicLibraryItemAlbum::sortedTracks()
     }
 
     return tracks.values();
+}
+
+void MusicLibraryItemAlbum::addTracks(MusicLibraryItemAlbum *other)
+{
+    m_singleTracks=true;
+    foreach (MusicLibraryItem *track, other->m_childItems) {
+        track->setParent(this);
+    }
+}
+
+bool sortTrackNames(const MusicLibraryItem *left, const MusicLibraryItem *right)
+{
+    return static_cast<const MusicLibraryItemSong*>(left)->song().artistSong().localeAwareCompare(
+                static_cast<const MusicLibraryItemSong*>(right)->song().artistSong())<0;
+}
+
+void MusicLibraryItemAlbum::sortTracks()
+{
+    qSort(m_childItems.begin(), m_childItems.end(), sortTrackNames);
 }
