@@ -27,11 +27,15 @@
 #include "musiclibraryitemroot.h"
 #include "musiclibraryitemartist.h"
 #include "song.h"
+#ifdef ENABLE_KDE_SUPPORT
+#include <KDE/KLocale>
+#endif
+#include <QtCore/QDebug>
 
 MusicLibraryItemArtist * MusicLibraryItemRoot::artist(const Song &s)
 {
     QString aa=s.albumArtist();
-    QHash<QString, int>::Iterator it=m_indexes.find(aa);
+    QHash<QString, int>::ConstIterator it=m_indexes.find(aa);
 
     if (m_indexes.end()==it) {
         MusicLibraryItemArtist *item=new MusicLibraryItemArtist(aa, this);
@@ -40,4 +44,40 @@ MusicLibraryItemArtist * MusicLibraryItemRoot::artist(const Song &s)
         return item;
     }
     return static_cast<MusicLibraryItemArtist *>(m_childItems.at(*it));
+}
+
+void MusicLibraryItemRoot::groupSingleTracks()
+{
+    QList<MusicLibraryItem *>::iterator it=m_childItems.begin();
+    MusicLibraryItemArtist *various=0;
+
+    for (; it!=m_childItems.end(); ) {
+        if ((!various || various!=(*it)) && static_cast<MusicLibraryItemArtist *>(*it)->allSingleTrack()) {
+            if (!various) {
+                Song s;
+                #ifdef ENABLE_KDE_SUPPORT
+                s.artist=i18n("Various Artists");
+                #else
+                s.artist=QObject::tr("Various Artists");
+                #endif
+                various=artist(s);
+            }
+            various->addToSingleTracks(static_cast<MusicLibraryItemArtist *>(*it));
+            QList<MusicLibraryItem *>::iterator cur=it;
+            ++it;
+            delete *cur;
+            m_childItems.erase(cur);
+        } else {
+            ++it;
+        }
+    }
+
+    if (various) {
+        various->sortSingle();
+        it=m_childItems.begin();
+        QList<MusicLibraryItem *>::iterator  end=m_childItems.end();
+        for (int i=0; it!=end; ++it, ++i) {
+            m_indexes.insert((*it)->data(), i);
+        }
+    }
 }
