@@ -58,6 +58,7 @@ struct Song
     static QString formattedTime(const quint32 &seconds);
     QString format();
     QString entryName() const;
+    QString artistSong() const;
     const QString & albumArtist() const { return albumartist.isEmpty() ? artist : albumartist; }
     const QString & displayTitle() const { return modifiedtitle.isEmpty() ? title : modifiedtitle; }
 };
