@@ -2,6 +2,8 @@
 -----
 1. Add option to show (and sort by) year of albums in library view.
 2. Show 'Various Artists' at the top of the library view.
+3. Add option to group single track artist/albums under
+   'Various Artists'/'Single Tracks'/'Artist - Track'
 
 0.1.2
 -----
